@@ -309,9 +309,14 @@ ENDIF(XML2_FOUND)
 
 FIND_PACKAGE(OpenCV QUIET)
 IF(OpenCV_FOUND)
-  OPTION(USE_OPENCV    "Compile ViSP with the OpenCV library" ON)
+  OPTION(USE_OPENCV    "Compile ViSP with OpenCV >= 2.1 library" ON)
 ELSE(OpenCV_FOUND)
-  SET(USE_OPENCV OFF)
+  FIND_PACKAGE(OpenCV2 QUIET)
+  IF(OpenCV_FOUND)
+    OPTION(USE_OPENCV    "Compile ViSP with OpenCV <= 2.0 library" ON)
+  ELSE(OpenCV_FOUND)
+    SET(USE_OPENCV OFF)
+  ENDIF(OpenCV_FOUND)
 ENDIF(OpenCV_FOUND)
 
 FIND_PACKAGE(X11)
